Some small tweaks to make the template work with 6.7.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1852 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/templates/view/src/org/visualvm/visualvmview/NameAndLocationPanel.form
+++ b/templates/view/src/org/visualvm/visualvmview/NameAndLocationPanel.form
@@ -4,6 +4,7 @@
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
     <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
     <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="2"/>
@@ -22,7 +23,7 @@
                       <EmptySpace min="54" pref="54" max="54" attributes="0"/>
                   </Group>
                   <Component id="lblProjectName" pref="118" max="32767" attributes="0"/>
-                  <Component id="lblPackageName" max="32767" attributes="0"/>
+                  <Component id="lblPackageName" pref="118" max="32767" attributes="0"/>
                   <Component id="createdFiles" pref="118" max="32767" attributes="0"/>
                   <Component id="modifiedFiles" pref="118" max="32767" attributes="0"/>
               </Group>
