--- a/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
+++ b/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
@@ -31,10 +31,8 @@
         </Property>
         <Property name="columns" type="int" value="20"/>
         <Property name="editable" type="boolean" value="false"/>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font bold="true" component="jTextAreaTop" property="font" relativeSize="true" size="0"/>
-          </FontInfo>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="UIManager.getFont(&quot;Label.font&quot;).deriveFont(Font.BOLD)" type="code"/>
         </Property>
         <Property name="lineWrap" type="boolean" value="true"/>
         <Property name="rows" type="int" value="1"/>
@@ -62,9 +60,6 @@
       <SubComponents>
         <Component class="javax.swing.JEditorPane" name="jEditorPane1">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" id="Tree.textBackground" palette="3" red="ff" type="palette"/>
-            </Property>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[500, 500]"/>
@@ -80,10 +75,8 @@
         </Property>
         <Property name="columns" type="int" value="20"/>
         <Property name="editable" type="boolean" value="false"/>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
-          <FontInfo relative="true">
-            <Font bold="true" component="jTextAreaBottom" property="font" relativeSize="true" size="0"/>
-          </FontInfo>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="UIManager.getFont(&quot;Label.font&quot;).deriveFont(Font.BOLD)" type="code"/>
         </Property>
         <Property name="lineWrap" type="boolean" value="true"/>
         <Property name="rows" type="int" value="2"/>
