Tweaking Accept License dialog, v3
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1933 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
+++ b/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
@@ -60,6 +60,9 @@
       <SubComponents>
         <Component class="javax.swing.JEditorPane" name="jEditorPane1">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" id="Tree.textBackground" palette="3" red="ff" type="palette"/>
+            </Property>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[500, 500]"/>
