--- a/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
+++ b/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/LicensePanel.form
@@ -60,10 +60,13 @@
       <SubComponents>
         <Component class="javax.swing.JEditorPane" name="jEditorPane1">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" id="Tree.textBackground" palette="3" red="ff" type="palette"/>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="UIManager.getDefaults().getColor(&quot;Tree.textBackground&quot;)" type="code"/>
             </Property>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="UIManager.getDefaults().getColor(&quot;Tree.textForeground&quot;)" type="code"/>
+            </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[500, 500]"/>
             </Property>
